Header logo added font, colour Alignment of top bar fixed Background color for header added :wq

--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 .titlelink {
     display: inline-flex;
     align-items: center;
-    ;
+    padding: 10px;
 }
 
 .topbar {
-    display: inline-flex;
-    justify-content: right;
-    
-    
+    display: inline-block;
+    margin-left: 20%;
+}
+
+.headerlogo {
+    display: inline-block;
+    margin-left: 10px;
+    color: white;
+    font-size: 36px;
+    font-family: sans-serif
+}
+
+html, body {
+    background: linear-gradient(#1f2937 50%, transparent 0%) no-repeat;
+    height: 25%    
 
 }
